# mum-phinder

./: CITATION.cff  CMakeLists.txt  Dockerfile  README.md  utils.md
.github/workflows/: tag.yaml
CMakeModules/: GitVersion.cmake
experiments/sars-cov2/: SARS-CoV2.accession_list  download.sh
experiments/sars-cov2/accessions/: acc_00  acc_01  acc_02  acc_03  acc_04  acc_05  acc_06  acc_07  acc_08  acc_09  acc_10  acc_11  acc_12  acc_13  acc_14  acc_15  acc_16  acc_17  acc_18  acc_19  acc_20  acc_21  acc_22  acc_23  acc_24  acc_25  acc_26  acc_27  acc_28  acc_29  acc_30  acc_31  acc_32  acc_33  acc_34  acc_35  acc_36  acc_37  acc_38  acc_39
include/common/: common.hpp  version.hpp.in
include/ms/: ms_rle_string.hpp  mum-phinder.hpp  phoni.hpp
pipeline/: mum-phinder.in  phoni-mum
src/: CMakeLists.txt  build_mum-phinder.cpp  mum-phinder.cpp
test/src/: CMakeLists.txt  phoni.cpp  sample_lcp.cpp
